--- a/CRUD-LPPA/index.html
+++ b/CRUD-LPPA/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <title>LPPA</title>
-    <link rel="stylesheet" type="text/css" href="/Content/style.css">
+    <link rel="stylesheet" type="text/css" href="./Content/styleLogin.css">
     <script src="https://kit.fontawesome.com/a81368914c.js"></script>
 </head>
 <body>
